plot_tools enhancements

--- a/apps/templates/includes/landing/navbar.html
+++ b/apps/templates/includes/landing/navbar.html
@@ -24,7 +24,7 @@
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'blog' %}">
               <i class="material-icons  me-2 text-md" >poll</i>
-              Geo-tools
+              Geotools
             </a>
           </li>
           <li class="nav-item dropdown dropdown-hover mx-2">
