--- a/apps/templates/pages/blog.html
+++ b/apps/templates/pages/blog.html
@@ -101,6 +101,13 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        
+      <P><br><br>Want to leave feedback, found a bug or have a great idea for our next tool development? 
+        <br>
+        Please do not hesitate to contact us at
+       <a href="mailto:info@example.com"> info@orycta.com</a>
+      </div>
     </div>
   </section>
   <!-- END Blogs w/ 4 cards w/ image & text & link -->
