--- a/apps/templates/pages/landing.html
+++ b/apps/templates/pages/landing.html
@@ -232,9 +232,9 @@
             <P>We provide In depth analysis of geotechnical data focusing on valuable, project specific insights.
               Interpretation made easy so that you can draw meaningful decisions and turn geotechnical risk into a
               unique competitive advantage.</P>
-            <P>Want to leave feedback, found a bug or have a great idea for our next tool development? 
+            <P>Have an interesting project or want to know more?
                <br>
-               Please do not hesitate to contact us at
+              Mail Us:
               <a href="mailto:info@example.com"> info@orycta.com</a>
             </P>
           </div>
