--- a/apps/templates/pages/tool/download.html
+++ b/apps/templates/pages/tool/download.html
@@ -18,15 +18,16 @@
                 <div class="row">
                     <div class="col-md-12 ml-auto mr-auto">
                         <p>General Information: <br>
-                            Project ID: {{Project_ID}}<br>
-                            Project Name: {{Project_Name}}<br>
-                            Project Location: {{Project_Location}}<br>
-                            Client: {{Client}}<br>
-                            Originator: {{Originator}}<br>
-                            The file contains a total of  {{N_Borehole}} boreholes 
-                            with an average ground level of {{Average_Ground_Level}} m, an average 
-                            water level of {{Average_Water_Level}} m and a maximum drilling depth of 
-                            {{Max_Borehole_depth}} m. The total drilled depth for all boreholes was {{total_drilled}} m.
+                            Project ID: <b style = "color: #33C4FF;">{{Project_ID}}</b><br>
+                            Project Name: <b style = "color: #33C4FF;">{{Project_Name}}</b><br>
+                            Project Location: <b style = "color: #33C4FF;">{{Project_Location}}</b><br>
+                            Client: <b style = "color: #33C4FF;">{{Client}}</b><br>
+                            Originator: <b style = "color: #33C4FF;">{{Originator}}</b><br>
+                            The file contains a total of  <b style = "color: #33C4FF;">{{N_Borehole}}</b> boreholes 
+                            with an average ground level of <b style = "color: #33C4FF;">{{Average_Ground_Level}} </b>m, an average 
+                            water level of <b style = "color: #33C4FF;">{{Average_Water_Level}} </b>m and a maximum drilling depth of 
+                            <b style = "color: #33C4FF;">{{Max_Borehole_depth}} </b>m. The total drilled depth for all boreholes was 
+                            <b style = "color: #33C4FF;">{{total_drilled}}</b> m.
 
                         </p>
                     </div>
@@ -35,19 +36,19 @@
                 <div class="row">
                     <div class="col-md-12 ml-auto mr-auto">
                         <p>General Information: <br>
-                            Ags File Name: {{name}}<br>
-                            File Size: {{size}}<br>
-                            AGD Version: {{version}}<br>
-                            Project ID: {{Project_ID}}<br>
-                            Project Name: {{Project_Name}}<br>
-                            Project Location: {{Project_Location}}<br>
-                            Client: {{Client}}<br>
-                            Originator: {{Originator}}<br>
-                            The file contains a total of  {{N_Borehole}} boreholes 
-                            with an average ground level of {{Average_Ground_Level}} m, an average 
-                            water level of {{Average_Water_Level}} m and a maximum drilling depth of 
-                            {{Max_Borehole_depth}} m.<br>
-                            A total of {{total_errors}} notifications or errors were found on the uploaded file.<br>
+                            Ags File Name: <b style = "color: #33C4FF;">{{name}}</b><br>
+                            File Size: <b style = "color: #33C4FF;">{{size}}</b> <br>
+                            AGD Version: <b style = "color: #33C4FF;">{{version}}</b><br>
+                            Project ID: <b style = "color: #33C4FF;">{{Project_ID}}</b> <br>
+                            Project Name: <b style = "color: #33C4FF;">{{Project_Name}}</b> <br>
+                            Project Location: <b style = "color: #33C4FF;">{{Project_Location}}</b> <br>
+                            Client: <b style = "color: #33C4FF;">{{Client}}</b> <br>
+                            Originator: <b style = "color: #33C4FF;">{{Originator}}</b><br><br>
+                            This file contains a total of  <b style = "color: #33C4FF;">{{N_Borehole}}</b>  boreholes 
+                            with an average ground level of <b style = "color: #33C4FF;">{{Average_Ground_Level}}</b>  m, an average 
+                            water level of <b style = "color: #33C4FF;">{{Average_Water_Level}}</b> m and a maximum drilling depth of 
+                            <b style = "color: #33C4FF;">{{Max_Borehole_depth}}</b>  m.<br>
+                            A total of <b style = "color: #33C4FF;">{{total_errors}}</b> notifications or errors were found on the uploaded file.<br>
                             A complete error log and a summary of all field, laboratory and chemical 
                             test data is included at the download links below.
                         </p>
