--- a/apps/templates/pages/tool/includes/FrictionAngleDetails.html
+++ b/apps/templates/pages/tool/includes/FrictionAngleDetails.html
@@ -4,6 +4,14 @@
 		src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 {% endblock javascripts %}
+<style>
+table,
+    th,
+    td ,
+    caption{
+        font-size : 16px;
+    }
+</style>
 <div class="card">
 
     <div class="card-header">
@@ -12,22 +20,25 @@
     <div class="card-body">
         <div class="row">
             <div class="col-md-7 ml-auto mr-auto">
-                <p>Friction angle together with cohesion define the shear strength parameters of soil. 
+                <h4>Friction angle together with cohesion define the shear strength parameters of soil. 
                     For granular / cohesionless soil (c = 0) friction angle is mainly estimated either from 
                     laboratory tests or from correlations with N SPT number. <br>
                     There are many correlations to estimate friction angle for granular material from N SPT 
                     values . Their are based on the uncorrected N SPT (field measurements) or based on 
                     the corrected (N1)60  value.<br>
-                </p>
+                </h4><br><br>
 
                 <h4>Method 1 : Peck, Hanson and Thornburn (1974)</h4>
-                <p>\(\phi' = 27.1+0.3N'+0.00054N'^2\)</p>
+                <h4>\(\phi' = 27.1+0.3N'+0.00054N'^2\)</h4><br>
+
                 <h4>Method 2 : defines friction angle from curve fitting of plot from 
-                    Peck, Hanson and Thornburn as presented in CIRIA Report 143 (1995)</h4>
+                    Peck, Hanson and Thornburn as presented in CIRIA Report 143 (1995)</h4><br>
+                    
                 <h4>Method 3 :  calculated as the average between two curve fitted curves 
                     from Terzaghi, Peck & Mersi (1996)</h4>
                 <h4>Method 4 and 5 : assume linear interpolation to the values defined as 
-                    approximation from two different sources: Peck, Hanson and Thornburn and Meyerhof.</h4>
+                    approximation from two different sources: Peck, Hanson and Thornburn and Meyerhof.</h4><br>
+
                 <div class="card-header">
                     <table class= "table table-hover table-sm text-center">
                         <caption>a - Source : Peck, Hanson and Thornburn (12) p. 310</caption>
@@ -80,13 +91,13 @@
                 </div>
                 <h4>Method 6 : from Dunham (1954) can be used only to define an 
                     upper bound of friction angle</h4>
-                <p>\(\phi' = \sqrt{ 12N} + 20\)</p>
+                <h4>\(\phi' = \sqrt{ 12N} + 20\)</h4>
             </div>
             <div class="col-md-5 ml-auto mr-auto">
                 <img class="img" src="{% static "assets/img/FractionAngle_2.png" %}"><br><br>
-                <p class ="text-center">method 2</p>
-                <img class="img" src="{% static "assets/img/FractionAngle_1.png" %}"><br><br>
-                <p class ="text-center">method 3</p>
+                <h4 class ="text-center">method 2</h4>
+                <img class="img" src="{% static "assets/img/FractionAngle_3.png" %}"><br><br>
+                <h4 class ="text-center">method 3</h4>
             </div>
         </div>
     </div>
