--- a/apps/templates/pages/tool/FrictionAngle.html
+++ b/apps/templates/pages/tool/FrictionAngle.html
@@ -163,12 +163,11 @@
                                                     <select style="width: 300px;" id="method" name="method" required>
                                                         <option hidden disabled selected value> -- select a method --
                                                         </option>
-                                                        <option value="1">Peck, Hanson and Thornburn</option>
-                                                        <option value="2">Peck et al</option>
-                                                        <option value="3">Curve fitting Terzaghi, Peck & Mersi</option>
-                                                        <option value="4">Peck, Hanson and Thornburn(table)</option>
-                                                        <option value="5">Meyerhof (table)</option>
-                                                        <option value="6">Dunham</option>
+                                                        <option value="1">Peck, Hanson and Thornburn (1974)</option>
+                                                        <option value="2">CIRIA 143 Report (1995)</option>
+                                                        <option value="3">Terzaghi, Peck & Mersi (1996)</option>
+                                                        <option value="4">Meyerhof (1956)</option>
+                                                        <option value="5">Dunham (1954)</option>
 
                                                     </select>
                                                 </div>
@@ -213,7 +212,10 @@
                                                 </table>
                                                 <button class="btn btn-rose" type="button"
                                                     style="position : absolute; right:0px;"
-                                                    onclick="myFunction()">+</button>
+                                                    onclick="addRow()">+</button>
+                                                <button class="btn btn-rose" type="button"
+                                                    style="position : absolute; right:50px;"
+                                                    onclick="deleteRow()">-</button>
                                             </div>
                                         </div>
                                     </div>
@@ -292,8 +294,11 @@
         if (x == ""){
             y = ""
         }
-        else if (x <= 200 && x >= 0) {
+        else if (x <= 60 && x >= 0) {
             y = 27.1 + 0.3 * x + 0.00054 * (x ** 2);
+        }
+        else if (x <= 100 && x > 60) {
+            y = 20 * (x ** 0.18) + 5.2;
         }
         else {
             y = ""
@@ -305,8 +310,11 @@
         if (x == ""){
             y = ""
         }
-        else if (x <= 200 && x >= 0) {
+        else if (x <= 60 && x >= 0) {
             y = -0.0014 * x ** 2 + 0.3534 * x + 26.964;
+        }
+        else if (x <= 100 && x > 60) {
+            y = 10.687 *  Math.log(x) - 0.6255;
         }
         else {
             y = ""
@@ -318,9 +326,14 @@
         if (x == ""){
             y = ""
         }
-        else if (x <= 200 && x >= 0) {
+        else if (x <= 60 && x >= 0) {
             var Coarse = 0.00002 * x ** 3 - 0.0056 * x ** 2 + 0.583 * x + 27.558;
             var Fine = -0.00002 * x ** 3 - 0.0015 * x ** 2 + 0.4089 * x + 27.395;
+            y = (Coarse + Fine) / 2;
+        }
+        else if (x <= 100 && x >= 60) {
+            var Coarse = 9.3873 * Math.log(x) + 8.2633;
+            var Fine =  4 * Math.log(x) + 25.83;
             y = (Coarse + Fine) / 2;
         }
         else {
@@ -329,43 +342,14 @@
         return y;
     }
 
-    function apply_sixth(x) {
-        if (x == ""){
-            y = ""
-        }
-        else if (x <= 200 && x >= 0) {
-            y = (12 * x) ** 0.5 + 20;
-        }
-        else {
-            y = ""
-        }
-        return y;
-    }
-
-    function get_average(x) {
-        var z = (apply_first(x) + apply_second(x) + apply_third(x) + apply_sixth(x)) / 4;
-        return z;
-    }
-
     function apply_forth(x) {
-        var z = get_average(200);
         if (x == ""){
             y = ""
         }
-        else if (x <= 4 && x >= 0) {
-            y = 25 + 3 * x / 4;
-        }
-        else if (x <= 10 && x > 4) {
-            y = 28 + 2 * (x - 4) / 6;
-        }
-        else if (x <= 30 && x > 10) {
-            y = 30 + 6 * (x - 10) / 20;
-        }
-        else if (x <= 50 && x > 30) {
-            y = 36 + 5 * (x - 30) / 20;
-        }
-        else if (x <= 200 && x > 50) {
-            y = 41 + (z - 41) * (x - 50) / 150;
+        else if (x <= 1 && x >= 0) {
+            y = 25 + x;}
+        else if (x <= 100 && x > 1) {
+            y = 24.22573 * (x ** 0.1547204);
         }
         else {
             y = ""
@@ -374,43 +358,30 @@
     }
 
     function apply_fifth(x) {
-        var z = get_average(200);
         if (x == ""){
             y = ""
         }
-        else if (x <= 4 && x >= 0) {
-            y = 25 + 5 * x / 4;
-        }
-        else if (x <= 10 && x > 4) {
-            y = 30 + 5 * (x - 4) / 6;
-        }
-        else if (x <= 30 && x > 10) {
-            y = 35 + 5 * (x - 10) / 20;
-        }
-        else if (x <= 50 && x > 30) {
-            y = 40 + 5 * (x - 30) / 20;
-        }
-        else if (x <= 200 && x > 50) {
-            y = 45 + (z - 45) * (x - 50) / 150;
+        else if (x <= 100 && x >= 0) {
+            y = (12 * x) ** 0.5 + 20;
         }
         else {
             y = ""
         }
         return y;
     }
+
     var chart_y_1 = [];
     var chart_y_2 = [];
     var chart_y_3 = [];
     var chart_y_4 = [];
     var chart_y_5 = [];
-    var chart_y_6 = [];
-    for (let i = 0; i < 201; i++) {
+
+    for (let i = 0; i < 101; i++) {
         chart_y_1.push(apply_first(i));
         chart_y_2.push(apply_second(i));
         chart_y_3.push(apply_third(i));
         chart_y_4.push(apply_forth(i));
         chart_y_5.push(apply_fifth(i));
-        chart_y_6.push(apply_sixth(i));
     }
     var chart = new Highcharts.chart("plot", {
         chart: {
@@ -421,6 +392,7 @@
             text: "Friction Angle"
         },
         xAxis: {
+            tickInterval:20,
             title: {
                 text: "N SPT",
                 enabled: true
@@ -441,7 +413,7 @@
         },
         plotOptions: {
             line: {
-                connectNulls : true,
+                //connectNulls : true,
                 marker:{enabled: false,},
                 enableMouseTracking: false
             },
@@ -454,61 +426,63 @@
 
         },
         series: [{
-            name: 'Peck, Hanson and Thornburn',
+            name: 'Peck, Hanson and Thornburn (1974)',
             data: chart_y_1
         }, {
-            name: 'Peck et al',
+            name: 'CIRIA 143 Report (1995)',
             data: chart_y_2
         },
         {
-            name: 'Curve fitting Terzaghi, Peck & Mersi',
+            name: 'Terzaghi, Peck & Mersi (1996)',
             data: chart_y_3
         },
         {
-            name: 'Peck, Hanson and Thornburn(table)',
+            name: 'Meyerhof (1956)',
             data: chart_y_4
         },
         {
-            name: 'Meyerhof(table)',
+            name: 'Dunham (1954)',
             data: chart_y_5
         },
         {
-            name: 'Dunham',
-            data: chart_y_6
-        }, {
             type: 'scatter',
             name: 'Your points',
             data: []
         }],
 
     });
-    function myFunction() {
+    function addRow() {
         var table = document.getElementById("table");
         var row = table.insertRow(-1);
         var cell1 = row.insertCell(0);
         var cell2 = row.insertCell(1);
         var cell3 = row.insertCell(2);
         cell1.innerHTML = '<select id="method_2" name="method_2">\
-            <option value="1">Peck, Hanson and Thornburn</option>\
-            <option value="2">Peck et al</option>\
-            <option value="3">Curve fitting Terzaghi, Peck & Mersi</option>\
-            <option value="4">Peck, Hanson and Thornburn(table)</option>\
-            <option value="5">Meyerhof (table)</option>\
-            <option value="6">Dunham</option></select>';
+            <option value="1">Peck, Hanson and Thornburn (1974)</option>\
+            <option value="2">CIRIA 143 Report (1995)</option>\
+            <option value="3">Terzaghi, Peck & Mersi (1996)</option>\
+            <option value="4">Meyerhof (1956)</option>\
+            <option value="5">Dunham (1954)</option></select>';
         cell2.innerHTML = '\
         <div class="row">\
             <div class="col-md-8">\
-                <input  type="number" id="calculate" name="input" min="0" max ="200" step="1" >\
+                <input  type="number" id="calculate" name="input" min="0" max ="100" step="1" >\
             </div>\
                 <div id="container">\
                     <i class="material-icons error">error_outline</i>\
                     <div class="errormessage">\
-                        Please enter a number between 0 and 200 \
+                        Please enter a number between 0 and 100 \
                     </div>\
                 </div>\
         </div>';
         cell3.innerHTML = '<div  name="FrictionAngle" >';
     }
+
+    function deleteRow() {
+        var table = document.getElementById("table");
+        table.deleteRow(-1);
+    }
+        
     function Calculate() {
         var table = document.getElementById('table');
         var methods = table.getElementsByTagName('select');
@@ -522,8 +496,7 @@
             else if (methods[i].value == "2") { y = apply_second(items[i].value); }
             else if (methods[i].value == "3") { y = apply_third(items[i].value); }
             else if (methods[i].value == "4") { y = apply_forth(items[i].value); }
-            else if (methods[i].value == "5") { y = apply_fifth(items[i].value); }
-            else { y = apply_sixth(items[i].value); }
+            else { y = apply_fifth(items[i].value); }
             if (typeof y == "number") {
                 y = y.toFixed(2);
                 plot_data.push([parseInt(items[i].value), parseFloat(y)]);
@@ -535,7 +508,7 @@
                 nodeList[i].style.display = "block";
             }
         }
-        chart.series[2].setData(plot_data);
+        chart.series[5].setData(plot_data);
     }
 </script>
 {% endblock javascripts %}
